fix spacing on heading for things we've done when on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ h2,h3 {
 h3 {
   font-size: 16pt;
 }
+h3.padded {
+  padding: 0 10px;
+}
+
 h2 { border-bottom: 1px solid #DC2727 }
 h4 { margin-top: 0px; margin-bottom: 5px; }
 
@@ -89,6 +93,10 @@ p {
 
 .who a:hover {
   text-decoration: underline;
+}
+
+.columns {
+  padding: 0 10px;
 }
 
 .column {
